--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,127 @@
-.hidden {
-  display: none;
+* {
+  box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+}
+
+p {
+  margin: 0;
+}
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  color: #212121;
+  line-height: 1.5;
+  font-size: 16px;
+  padding: 0 10 10 10;
+}
+
+:root {
+  --accent-color: #3b54ad;
+  --accent-color-darker: #19359e;
+  --btn-bg-color: #ededf5;
+  --main-bg-color: #fff;
+  --main-color: #110c08;
+}
+
+.search-form {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 10px;
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  background-color: var(--accent-color);
+  box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 1px rgb(0 0 0 / 14%),
+    0 2px 1px rgb(0 0 0 / 20%);
+}
+
+.search-form input {
+  padding: 8px;
+
+  width: 20%;
+  border-radius: 4px 0 0 4px;
+  border: none;
+  outline: none;
+
+  background-color: var(--main-bg-color);
+
+  font: inherit;
+}
+
+.search-form button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  border-radius: 0 4px 4px 0;
+  border: none;
+  background-color: var(--btn-bg-color);
+  cursor: pointer;
+}
+
+.gallery {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-left: -20px;
+  padding-top: 60px;
+}
+
+.info {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.gallery__link {
+  margin-top: 20px;
+  margin-left: 20px;
+  min-width: 320px;
+  flex-basis: calc((100% - 80px) / 4);
+  border: 2px solid rgb(241, 238, 238);
+  border-radius: 10px;
+  overflow: hidden;
+  transition: all 0.3s;
+}
+
+.gallery__link:hover,
+.gallery__link:focus {
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.gallery-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.gallery-item__img {
+  display: block;
+  height: 30vh;
+  object-fit: cover;
+}
+
+.info {
+  padding: 10px;
+  justify-content: space-around;
+}
+
+.info-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: var(--main-color);
+}
+
+.info-item:not(:first-child) {
+  margin-left: 5px;
 }
